admin/css/style.css
body {
    margin: 0;
    padding: 0;
}

#conteneur-menu2 {
    display: inline-flex;
    background: #313131;
    font-family: 'Abel', arial, serif;
    padding-top: 14px;
    text-transform: uppercase;
}
 
#conteneur-menu2 ul {
    padding: 0;
    margin: 0;
    margin-left: 50px;
    float: left;
}
 
#conteneur-menu2 ul li {
    list-style: none;
    padding: 0px;
    float: left;
}
 
#conteneur-menu2 ul li a {
    text-decoration: none;
    font-size: 25px;
    padding: 4px;
    display: block;
    color: white;
    background: transparent;
    width: 230px;
    -moz-transition: all .5s; 
    -webkit-transition: all .5s; 
    -o-transition: all .5s; 
    transition: all .5s;
    line-height: 20px;
}
 
 
#conteneur-menu2 ul li a:hover {
    background: #54B6A8;
    padding-left: 20px;
    width: 220px;
    -moz-transition: all .5s; 
    -webkit-transition: all .5s; 
    -o-transition: all .5s; 
    transition: all .5s;
}

#messages{
    font-size: 25px;
    font-family: 'Abel', arial, serif;
    text-transform: uppercase;
}

#post{
    background: #F5F5F5;
    height: 320px;
    box-shadow: 3px 3px 4px rgb(136, 136, 136);
}

.weekly{
    display: block;
    height: 50px;
    width: 50px;
    float: left;
    margin: 10px;
    box-shadow: 5px 4px 2px 2px rgb(78, 40, 83);
}

.weekly img{
    height: 50px;
    width: 50px;
}

.frame{
    float: right;
    width: 50%;
    padding: 5px;
    position: relative;
    top: -140px;
    height: 293px;
}

.frame iframe{
    display: block;
    width: 100%;
    height: 280px;
}

#edit_btn{
    margin: 2px;
}

.valid{
    display: block;
    width: 100%;
    margin-bottom: 100px;
}

#float_form{
    width: 100%;
    padding-top:15px;
}

.missing{
    border: 1px solid rgb(165, 19, 19);
    border-radius: 3px !important;
}

#block_users{
    width: 50%;
    float: left;
    box-shadow: 2px 6px 9px 2px rgb(230, 230, 230);
}

#block_new_admin{
    width: 50%;
    float: right;
}

#wrapper{
    width: 80%;
    float: right;
    padding: 15px;
}

#sidebar{
    width: 19%;
    float: left;
    padding: 5px;
    box-shadow: 2px 6px 9px 2px rgb(230, 230, 230);
}

.get_vid{
    position: relative;
    left: 45%;
    top: 45%;
    z-index: 999;
}

.gal_pic img{
    width: 200px;
    height: auto;
    float: left;
}

.pic_del{
    float: left;
}

#block_edit ul{
    list-style-type: none;
}

#block_edit ul li{
    float: left;
    margin: 15px;
}

#block_edit{
    margin-bottom: 30px;
}

#block_new_partner{
    margin-top: 45px;
}

#form_login{
    /*background: white;*/
    /*color: white;*/
    text-align: center;
}

#body_login{
    background: rgb(240, 240, 240);
}

.wra_img{
    display: -webkit-inline-box;
    height: 220px;
}

.gal_pic2 img{
    width: 200px;
    height: auto;
}
.pic_del2{
    float: right;
}
#img_div2{
    margin: 15px;
    padding: 5px;
    width: 77%;
    float: right;
    box-shadow: 2px 0px 11px 0px rgba(185, 185, 185, 0.79);
}

#drafts{
	z-index: 999999;
	display: block;
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	min-height: 100vw;
	background: rgba(255, 255, 255, 0.83);
}

.one_draft{
	/* border: 1px solid black; */
	width: 400px;
	height: 400px;
	overflow: auto; 
	margin: 5px;
	float: left;
	background: white;
	box-shadow: 1px 5px 8px 0px rgba(185, 185, 185, 0.85);
	word-wrap: break-word;
}

#drafts_list{
	padding: 15px;
}

.one_draft h2 {
	text-align: center;
	font-family: 'Abel', arial, serif;
}

.one_draft h4 {
	display: inline-block;
	width: 45%;
	word-wrap: break-word;
}

.one_draft .date{
	display: inline-block;
	width: 45%;
}

.hide_drafts {
	position: absolute;
	top: 5px;
	right: 5px;
}

